<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_cost_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/store_picture"
            app:layout_constraintBottom_toBottomOf="@id/edit_cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_cost_of_service"
            app:srcCompat="@drawable/ic_store"
            app:tint="@color/primaryDarkColor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_cost_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/edit_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_cost_of_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/iv_question_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_service_question"
            app:srcCompat="@drawable/ic_service"
            app:tint="@color/primaryDarkColor" />

        <TextView
            android:id="@+id/tv_service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@id/iv_question_service"
            app:layout_constraintTop_toBottomOf="@id/edit_cost_of_service" />

        <RadioGroup
            android:id="@+id/rg_tip_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:checkedButton="@id/rb_amazing"
            app:layout_constraintStart_toStartOf="@id/tv_service_question"
            app:layout_constraintTop_toBottomOf="@id/tv_service_question">

            <RadioButton
                android:id="@+id/rb_amazing"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing" />

            <RadioButton
                android:id="@+id/rb_good"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/rb_okay"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay" />
        </RadioGroup>

        <ImageView
            android:id="@+id/iv_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/switch_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/switch_round_up"
            app:srcCompat="@drawable/ic_round_up"
            app:tint="@color/primaryDarkColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_round_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_round"
            app:layout_constraintTop_toBottomOf="@id/rg_tip_option" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_round_up" />

        <TextView
            android:id="@+id/tv_tip_amount"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tip_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate"
            tools:text="Tip Amount: 10$" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>